--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 :root {
     --gray-color: #555;
     --green-color: #9cdf3d;
+    --aqua-color: #00cc9b;
     /* tipografia */
     --normal: 12px;
     /* Box shadow */
@@ -141,8 +142,10 @@ nav ul li a:hover {
     padding: 10px;
 }
 
+/* footer */
+
 footer {
-    background-color: #00cc9b;
+    background-color: var(--aqua-color);
     padding: 10px 20px 10px 0;
 }
 footer ul {
@@ -152,4 +155,51 @@ footer ul {
 
 footer ul li {
     list-style: none;
+}
+
+/* modulo pago*/
+
+.modulo_pago {
+    background-color: #fff;
+    box-shadow: var(--box);
+    padding: 10px;
+}
+
+.modulo_pago_images {
+    margin: auto;
+    text-align: center;
+}
+
+.modulo_pago_images img {
+    width: 100%;
+}
+
+.container_space {
+    padding: 11% 0;
+}
+
+form {
+    display: inherit;
+}
+
+.modulo_pago label {
+    margin-top: 10px;
+}
+
+.modulo_pago input {
+    width: 100%;
+    margin: 5px 0;
+    height: 35px;
+    border-radius: 2px;
+    border: 1px solid var(--gray-color);
+    box-sizing: border-box;
+}
+
+.modulo_pago button {
+    margin-top: 20px;
+    width: 100%;
+    height: 35px;
+    background-color: var(--aqua-color);
+    border: 0px;
+    border-radius: 3px;
 }
